# rat

./: Cargo.toml  README.md
src/: archiver.rs  config.rs  extractor.rs  main.rs
