[package]
name = "rat"
version = "0.0.1"
edition = "2021"
walkdir = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5.41", features = ["derive"] }
